@@ -1,3 +1,6 @@
+2011-01-13  6.7.4-7 Cristy  <quetzlzacatenango@image...>
+  * Support font rendering option: -set type:autohint on.
+
 2011-01-12  6.7.4-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-6, SVN revision 6434.
 
